--- a/src/include_access_model/schema/include_access_model.yaml
+++ b/src/include_access_model/schema/include_access_model.yaml
@@ -104,6 +104,7 @@ classes:
   Publication:
     title: Publication
     description: Information about a specific publication.
+    is_a: Record
     #Could add more here
     slots:
       - bibliographic_reference
