🍱 Link DOIs in Study

--- a/src/include_access_model/schema/include_access_model.yaml
+++ b/src/include_access_model/schema/include_access_model.yaml
@@ -72,8 +72,7 @@ classes:
 #    - guidMapped
       - acknowledgments
       - citation_statement
-#      - doi
-#      - doi_citation
+      - doi
   VirtualBiorepository:
     title: Virtual BioRepository (VBR)
     description: An organization that can provide access to specimen for further analysis.
