🍱 Add ER Diagram
This changes adds automatic overall ER Diagram generation to the project. It should work seamlessly for local and github deployments. It's possible there could be a naming conflict with other generated text, eg, if there was a slot called "erdiagram".

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,8 +25,9 @@ watch:
   - src/include_access_model/schema
 
 nav:
-  - Home: index.md
+#  - Home: index.md
   - Schema: elements/index.md
+  - ER Diagram: elements/erdiagram.md
   - About: about.md
 
 exclude_docs: |
